--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sankey-react-app",
   "version": "0.1.0",
   "private": true,
+  "engines": { "node" : ">=8.9.4" },
   "dependencies": {
     "axios": "^0.17.1",
     "cbioportal-api-client": "^0.3.4",
