--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: node_js
+install:
+# Install the node version specified in package.json: 
+# https://github.com/travis-ci/travis-ci/issues/4653#issuecomment-276949979
+- nvm install "$(jq -r '.engines.node' package.json)"
 script:
 - npm install
