--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: node_js
 install:
+- nvm ls-remote # TODO: remove; just for debugging
 # Install the node version specified in package.json: 
 # https://github.com/travis-ci/travis-ci/issues/4653#issuecomment-276949979
 - nvm install "$(jq -r '.engines.node' package.json)"
