updated drop-down menu

--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "test": "jest"
+    "test": "jest",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "jest": "^22.4.2"
