--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "sankey-react-app",
   "version": "0.1.0",
   "private": true,
-  "engines": { "node" : "9.5.0" },
+  "engines": {
+    "node": "9.5.0"
+  },
   "dependencies": {
+    "@mdi/font": "^2.2.43",
     "axios": "^0.17.1",
     "cbioportal-api-client": "^0.3.4",
     "d3": "^4.13.0",
     "d3-timeline": "^1.0.1",
     "jquery": "^3.3.1",
+    "mdi": "^2.2.43",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "react": "^16.2.0",
