fixed bug and package.json

--- a/package.json
+++ b/package.json
@@ -6,20 +6,15 @@
     "node": "9.5.0"
   },
   "dependencies": {
-    "@mdi/font": "^2.2.43",
     "axios": "^0.17.1",
-    "cbioportal-api-client": "^0.3.4",
     "d3": "^4.13.0",
-    "d3-timeline": "^1.0.1",
     "jquery": "^3.3.1",
-    "mdi": "^2.2.43",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.3.1",
-    "react-scripts": "1.1.0",
-    "react-vis": "^1.8.2"
+    "react-scripts": "1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
