--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,12 @@ install:
 script:
 - npm install --dev
 - ./tests.sh
+- npm run build
+deploy:
+  provider: s3
+  access_key_id: "YOUR AWS ACCESS KEY"
+  secret_access_key: "YOUR AWS SECRET KEY"
+  bucket: "S3 Bucket"
+  skip_cleanup: true
+on:
+  branch: master
