--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-fontawesome": "^1.6.1",
     "react-modal": "^3.3.1",
     "react-scripts": "1.1.0"
   },
