--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
     "react-modal": "^3.3.1",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
