--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ install:
 - nvm ls-remote
 - nvm install "$(jq -r '.engines.node' package.json)"
 script:
-- npm install --dev
+- npm install --only=dev
 #- ./tests.sh
 - npm run build
 deploy:
