--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
 - npm run build
 deploy:
  provider: s3
- access_key_id: $AWS_ACCESS_KEY
+ access_key_id: $AWS_ACCESS_KEY_ID
  secret_access_key: $AWS_SECRET_ACCESS_KEY
  bucket: oncothreads
  local_dir: build
