--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ deploy:
  provider: s3
  access_key_id: $AWS_ACCESS_KEY_ID
  secret_access_key: $AWS_SECRET_ACCESS_KEY
- bucket: oncothreads
+ bucket: oncothreads.gehlenborglab.org
  local_dir: build
  skip_cleanup: true
  on:
