--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
     "react-scripts": "1.1.0",
+    "react-select": "^2.0.0",
     "uuid": "^3.2.1"
   },
   "scripts": {
