--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-fontawesome": "^1.6.1",
     "react-scripts": "1.1.0",
     "react-select": "^2.0.0",
+    "react-toggletip": "^1.0.6",
     "uuid": "^3.2.1"
   },
   "scripts": {
