--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mobx-react": "^4.3.5",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.1",
+    "react-color": "^2.14.1",
     "react-dom": "^16.5.2",
     "react-fontawesome": "^1.6.1",
     "react-scripts": "1.1.0",
