--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "d3": "^4.13.0",
+    "d3-scale-chromatic": "^1.3.3",
     "jquery": "^3.3.1",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
