--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.17.1",
     "d3": "^4.13.0",
     "d3-scale-chromatic": "^1.3.3",
+    "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
@@ -28,6 +29,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "jest": "^22.4.2"
+    "jest": "^22.4.2",
+    "jspdf": "^1.4.1"
   }
 }
