--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.3.1",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
+    "papaparse": "^4.6.3",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-color": "^2.14.1",
