--- a/package.json
+++ b/package.json
@@ -31,5 +31,12 @@
   },
   "devDependencies": {
     "jest": "^22.4.2"
-  }
+  },
+  "homepage": ".",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
