--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-fontawesome": "^1.6.1",
     "react-scripts": "2.1.5",
     "react-select": "^2.0.0",
+    "react-sortable-pane": "^1.1.0",
     "uuid": "^3.2.1"
   },
   "scripts": {
