--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bootstrap": "^4.2.1",
     "d3": "^4.13.0",
     "d3-scale-chromatic": "^1.3.3",
-    "html2canvas": "^1.0.0-alpha.12",
+    "html2canvas": "^1.0.0-rc.3",
     "jquery": "^3.3.1",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
