--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "bootstrap": "^4.2.1",
     "d3": "^4.13.0",
     "d3-scale-chromatic": "^1.3.3",
+    "eslint-config-airbnb": "^17.1.1",
     "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "npm": "^6.9.0",
     "papaparse": "^4.6.3",
+    "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-bootstrap": "^0.32.4",
     "react-color": "^2.14.1",
