--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3": "^4.13.0",
     "d3-scale-chromatic": "^1.3.3",
     "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-jest": "^22.13.6",
     "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
     "mobx": "^3.4.1",
@@ -41,6 +42,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.10.0",
     "jspdf": "^1.5.3"
   }
 }
