--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "eslint-plugin-jest": "^22.13.6",
     "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
+    "lineupjs": "^3.1.7",
+    "lineupjsx": "^1.0.7",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "npm": "^6.9.0",
