--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "bootstrap": "^4.2.1",
     "d3": "^4.13.0",
     "d3-scale-chromatic": "^1.3.3",
-    "html2canvas": "^1.0.0-rc.3",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-jest": "^22.13.6",
+    "html2canvas": "^1.0.0-rc.3",
     "jquery": "^3.3.1",
     "lineupjs": "^3.1.7",
     "lineupjsx": "^1.0.7",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
+    "normalize.css": "^8.0.1",
     "npm": "^6.9.0",
     "papaparse": "^4.6.3",
     "prop-types": "^15.7.2",
