--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "sankey-react-app",
-  "version": "0.1.0",
+  "name": "OncoThreads",
+  "version": "0.0.1",
   "private": true,
   "engines": {
     "node": "9.5.0"
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.2.1",
     "d3": "^4.13.0",
     "d3-scale-chromatic": "^1.3.3",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-jest": "^22.13.6",
-    "html2canvas": "^1.0.0-rc.3",
+    "electron-is-dev": "^1.1.0",
+    "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
     "lineupjs": "^3.1.7",
     "lineupjsx": "^1.0.7",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
-    "normalize.css": "^8.0.1",
-    "npm": "^6.9.0",
     "papaparse": "^4.6.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
@@ -26,25 +24,56 @@
     "react-color": "^2.14.1",
     "react-dom": "^16.8.3",
     "react-fontawesome": "^1.6.1",
-    "react-scripts": "2.1.5",
     "react-select": "^2.0.0",
     "react-sortable-pane": "^1.1.0",
     "uuid": "^3.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test --env=jsdom",
+    "react-eject": "react-scripts eject",
+    "electron-build": "electron-builder",
+    "build": "npm run react-build && npm run electron-build",
+    "electron-start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-publish": "build --publish=always",
+    "preelectron-publish": "npm run react-build"
   },
+  "homepage": ".",
+  "main": "public/electron.js",
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
   ],
+  "build": {
+    "appId": "com.github.hms-dbmi.oncothreads",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "hms-dbmi",
+        "repo": "OncoThreads"
+      }
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
+  },
   "devDependencies": {
-    "enzyme": "^3.10.0",
-    "jspdf": "^1.5.3"
+    "concurrently": "^4.1.0",
+    "electron-builder": "^20.44.4",
+    "electron": "^5.0.5",
+    "cross-env": "^5.2.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "jspdf": "^1.5.3",
+    "popper.js": "^1.15.0",
+    "react-scripts": "^2.1.5",
+    "typescript": "^3.5.2",
+    "wait-on": "^3.2.0"
   }
 }
