--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lineupjsx": "^1.0.7",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
+    "mobx-utils": "^5.4.1",
     "normalize.css": "^8.0.1",
     "npm": "^6.11.3",
     "papaparse": "^5.0.2",
