--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: node_js
-install:
-- nvm ls-remote
-- nvm install "$(jq -r '.engines.node' package.json)"
-- npm install --dev
+node_js:
+  - 9.5.0
 cache:
   directories:
     - node_modules
