increasing memory and preventing rebuild

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
       "build/**/*",
       "node_modules/**/*"
     ],
+    "npmRebuild": false,
     "publish": [
       {
         "provider": "github",
