--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: node_js
 node_js:
   - 9.5.0
+node_js:
+- 10.16.3
+before_script:
+  export NODE_OPTIONS=--max_old_space_size=4096
 cache:
   directories:
     - node_modules
+    - $HOME/.npm
     - $HOME/.cache/electron
     - $HOME/.cache/electron-builder
 env:
