--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "OncoThreads",
   "version": "0.0.1",
+  "author": "Theresa Harbig, Sabrina Nusrat",
+  "description": "Visualization of longitudinal cancer genomics data",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
@@ -50,7 +52,6 @@
       "build/**/*",
       "node_modules/**/*"
     ],
-    "npmRebuild": false,
     "publish": [
       {
         "provider": "github",
@@ -70,7 +71,7 @@
     "eslint-config-airbnb": "^17.1.1",
     "jspdf": "^1.5.3",
     "popper.js": "^1.15.0",
-    "react-scripts": "^2.1.5",
+    "react-scripts": "^3.1.1",
     "typescript": "^3.5.2",
     "wait-on": "^3.2.0"
   }
