--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "eslint-plugin-jest": "^22.17.0",
     "html2canvas": "^1.0.0-rc.4",
     "jquery": "^3.4.1",
-    "lineupjs": "^3.2.1",
+    "lineupjs": "^3.2.2",
     "lineupjsx": "^1.0.7",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
     "mobx-utils": "^5.4.1",
     "normalize.css": "^8.0.1",
     "npm": "^6.11.3",
-    "papaparse": "^5.0.2",
+    "papaparse": "^5.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-bootstrap": "^0.32.4",
     "react-color": "^2.17.3",
     "react-dom": "^16.9.0",
     "react-fontawesome": "^1.6.1",
-    "react-scripts": "3.1.1",
-    "react-select": "^3.0.4",
+    "react-scripts": "^3.1.2",
+    "react-select": "^3.0.5",
     "react-sortable-pane": "^1.1.0",
     "uuid": "^3.3.3"
   },
