--- a/package.json
+++ b/package.json
@@ -52,6 +52,11 @@
       "build/**/*",
       "node_modules/**/*"
     ],
+    "snap": {
+      "publish": [
+        "github"
+      ]
+    },
     "publish": [
       {
         "provider": "github",
@@ -66,7 +71,7 @@
   "devDependencies": {
     "concurrently": "^4.1.0",
     "electron": "^6.0.10",
-    "electron-builder": "^21.0.14",
+    "electron-builder": "^21.2.0",
     "cross-env": "^6.0.0",
     "eslint-config-airbnb": "^18.0.1",
     "jspdf": "^1.5.3",
