--- a/package.json
+++ b/package.json
@@ -1,50 +1,83 @@
 {
-  "name": "sankey-react-app",
-  "version": "0.1.0",
+  "name": "OncoThreads",
+  "version": "0.0.1",
+  "author": "Theresa Harbig, Sabrina Nusrat",
+  "description": "Visualization of longitudinal cancer genomics data",
   "private": true,
-  "engines": {
-    "node": "9.5.0"
-  },
   "dependencies": {
     "axios": "^0.19.0",
-    "d3": "^4.13.0",
-    "d3-scale-chromatic": "^1.3.3",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-jest": "^22.13.6",
-    "html2canvas": "^1.0.0-rc.3",
-    "jquery": "^3.3.1",
-    "lineupjs": "^3.1.7",
+    "d3": "^5.12.0",
+    "d3-scale-chromatic": "^1.5.0",
+    "electron-is-dev": "^1.1.0",
+    "html2canvas": "^1.0.0-rc.4",
+    "jquery": "^3.4.1",
+    "lineupjs": "^3.2.2",
     "lineupjsx": "^1.0.7",
-    "mobx": "^3.4.1",
-    "mobx-react": "^4.3.5",
-    "normalize.css": "^8.0.1",
-    "npm": "^6.9.0",
-    "papaparse": "^4.6.3",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3",
+    "mobx-utils": "^5.4.1",
+    "papaparse": "^5.1.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
+    "react": "^16.9.0",
     "react-bootstrap": "^0.32.4",
-    "react-color": "^2.14.1",
-    "react-dom": "^16.8.3",
+    "react-color": "^2.17.3",
+    "react-dom": "^16.9.0",
     "react-fontawesome": "^1.6.1",
-    "react-scripts": "2.1.5",
-    "react-select": "^2.0.0",
+    "react-select": "^3.0.5",
     "react-sortable-pane": "^1.1.0",
-    "uuid": "^3.2.1"
+    "uuid": "^3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test",
+    "react-eject": "react-scripts eject",
+    "electron-build": "electron-builder",
+    "build": "npm run react-build && npm run electron-build",
+    "electron-start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-publish": "npm run build --publish=always",
+    "preelectron-publish": "npm run react-build"
   },
+  "homepage": ".",
+  "main": "public/electron.js",
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
   ],
+  "build": {
+    "appId": "com.github.hms-dbmi.oncothreads",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "snap": {
+      "publish": [
+        "github"
+      ]
+    },
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "hms-dbmi",
+        "repo": "OncoThreads"
+      }
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
+  },
   "devDependencies": {
-    "enzyme": "^3.10.0",
-    "jspdf": "^1.5.3"
+    "concurrently": "^4.1.0",
+    "electron": "^6.0.10",
+    "electron-builder": "^21.2.0",
+    "cross-env": "^6.0.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "jspdf": "^1.5.3",
+    "popper.js": "^1.15.0",
+    "react-scripts": "^3.1.1",
+    "typescript": "^3.5.2",
+    "wait-on": "^3.2.0"
   }
 }
