--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
   },
   "scripts": {
     "react-start": "react-scripts start",
-    "react-build": "react-scripts build",
+    "react-build-electron": "react-scripts build",
+    "react-build-web": "PUBLIC_URL=http://oncothreads.gehlenborglab.org react-scripts build",
     "react-test": "react-scripts test",
     "react-eject": "react-scripts eject",
     "electron-build": "electron-builder",
-    "build": "npm run react-build && npm run electron-build",
+    "build": "npm run react-build-electron && npm run electron-build",
     "electron-start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-publish": "npm run build --publish=always",
-    "preelectron-publish": "npm run react-build"
   },
   "homepage": ".",
   "main": "public/electron.js",
