--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Visualization of longitudinal cancer genomics data",
   "private": true,
   "dependencies": {
+    "antd": "^4.0.4",
     "axios": "^0.19.0",
     "d3": "^5.12.0",
     "d3-scale-chromatic": "^1.5.0",
@@ -28,6 +29,7 @@
     "uuid": "^3.3.3"
   },
   "scripts": {
+    "start": "react-scripts start",
     "react-start": "react-scripts start",
     "react-build-electron": "react-scripts build",
     "react-build-web": "PUBLIC_URL=http://oncothreads.gehlenborglab.org react-scripts build",
