--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.4.1",
     "lineupjs": "^3.2.2",
     "lineupjsx": "^1.0.7",
+    "ml-pca": "^4.0.1",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
     "mobx-utils": "^5.4.1",
