--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd": "^4.0.4",
     "axios": "^0.19.0",
     "d3": "^5.12.0",
+    "d3-lasso": "github:skokenes/d3-lasso",
     "d3-scale-chromatic": "^1.5.0",
     "electron-is-dev": "^1.1.0",
     "html2canvas": "^1.0.0-rc.4",
