enable absolute import

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,6 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
+# # dotenv environment variables file
+# .env
 
