--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Visualization of longitudinal cancer genomics data",
   "private": true,
   "dependencies": {
+    "@types/d3": "^5.7.2",
     "antd": "^4.0.4",
     "axios": "^0.19.0",
     "d3": "^5.12.0",
