--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "baseUrl": "./src",
-    "target": "es6",
+    "target": "ES6",
+    "experimentalDecorators": true,
     "lib": [
       "dom",
       "dom.iterable",
