--- a/package.json
+++ b/package.json
@@ -6,30 +6,32 @@
   "private": true,
   "dependencies": {
     "@types/d3": "^5.7.2",
-    "antd": "^4.0.4",
-    "axios": "^0.19.0",
-    "d3": "^5.12.0",
+    "@types/d3-sankey": "^0.11.0",
+    "antd": "^4.2.4",
+    "axios": "^0.19.2",
+    "d3": "^5.16.0",
     "d3-lasso": "github:skokenes/d3-lasso",
+    "d3-sankey": "^0.12.3",
     "d3-scale-chromatic": "^1.5.0",
-    "electron-is-dev": "^1.1.0",
-    "html2canvas": "^1.0.0-rc.4",
-    "jquery": "^3.4.1",
-    "lineupjs": "^3.2.2",
+    "electron-is-dev": "^1.2.0",
+    "html2canvas": "^1.0.0-rc.5",
+    "jquery": "^3.5.1",
+    "lineupjs": "^3.3.0",
     "lineupjsx": "^1.0.7",
     "ml-pca": "^4.0.1",
-    "mobx": "^5.13.0",
-    "mobx-react": "^6.1.3",
-    "mobx-utils": "^5.4.1",
-    "papaparse": "^5.1.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
+    "mobx-utils": "^5.6.0",
+    "papaparse": "^5.2.0",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
+    "react": "^16.13.1",
     "react-bootstrap": "^0.32.4",
-    "react-color": "^2.17.3",
-    "react-dom": "^16.9.0",
-    "react-fontawesome": "^1.6.1",
-    "react-select": "^3.0.5",
+    "react-color": "^2.18.1",
+    "react-dom": "^16.13.1",
+    "react-fontawesome": "^1.7.1",
+    "react-select": "^3.1.0",
     "react-sortable-pane": "^1.1.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -74,14 +76,14 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "electron": "^6.0.10",
+    "cross-env": "^6.0.3",
+    "electron": "^6.1.12",
     "electron-builder": "^21.2.0",
-    "cross-env": "^6.0.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb": "^18.1.0",
     "jspdf": "^1.5.3",
-    "popper.js": "^1.15.0",
-    "react-scripts": "^3.1.1",
-    "typescript": "^3.5.2",
+    "popper.js": "^1.16.1",
+    "react-scripts": "^3.4.1",
+    "typescript": "^3.9.3",
     "wait-on": "^3.2.0"
   }
 }
