--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
 - 10.16.3
-before_script:
+before_script: |
   export NODE_OPTIONS=--max_old_space_size=4096
   if [[ "$TRAVIS_BRANCH" == "master" ]]; then
     export BUCKET=oncothreads.gehlenborglab.org
