--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_script: |
   export NODE_OPTIONS=--max_old_space_size=4096
   if [[ "$TRAVIS_BRANCH" == "master" ]]; then
     export BUCKET=oncothreads.gehlenborglab.org
-  else
+  else 
     export BUCKET=oncothreads-v2.gehlenborglab.org
   fi
 cache:
@@ -50,4 +50,4 @@ jobs:
         local_dir: build
         skip_cleanup: true
         on:
-          branch: master
+          branch: $TRAVIS_BRANCH =~ ^(master|qianwen_dev)$
