--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ jobs:
         local_dir: build
         skip_cleanup: true
         region: us-east-1
+        acl: public_read
         on:
           branch: master
     
@@ -61,5 +62,6 @@ jobs:
         local_dir: build
         skip_cleanup: true
         region: us-east-2
+        acl: public_read
         on:
           branch: version2
