--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "d3-scale-chromatic": "^1.5.0",
     "electron-is-dev": "^1.2.0",
     "html2canvas": "^1.0.0-rc.5",
+    "intro.js": "^2.9.3",
     "jquery": "^3.5.1",
     "lineupjs": "^3.3.0",
     "lineupjsx": "^1.0.7",
@@ -76,6 +77,7 @@
     }
   },
   "devDependencies": {
+    "@types/intro.js": "^2.4.7",
     "concurrently": "^4.1.0",
     "cross-env": "^6.0.3",
     "electron": "^6.1.12",
