--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   },
   "devDependencies": {
     "@types/intro.js": "^2.4.7",
+    "@types/uuid": "^8.3.0",
     "concurrently": "^4.1.0",
     "cross-env": "^6.0.3",
     "electron": "^6.1.12",
@@ -85,7 +86,7 @@
     "eslint-config-airbnb": "^18.1.0",
     "jspdf": "^1.5.3",
     "popper.js": "^1.16.1",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.3",
     "tslib": "^2.0.1",
     "typescript": "^3.9.3",
     "wait-on": "^3.2.0"
