--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "description": "Visualization of longitudinal cancer genomics data",
   "private": true,
   "dependencies": {
-    "@types/d3": "^5.7.2",
-    "@types/d3-sankey": "^0.11.0",
     "antd": "^4.2.4",
     "axios": "^0.19.2",
     "d3": "^5.16.0",
@@ -32,7 +30,8 @@
     "react-fontawesome": "^1.7.1",
     "react-select": "^3.1.0",
     "react-sortable-pane": "^1.1.0",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "react-grid-layout": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -77,7 +76,10 @@
     }
   },
   "devDependencies": {
+    "@types/d3": "^5.7.2",
+    "@types/d3-sankey": "^0.11.0",
     "@types/intro.js": "^2.4.7",
+    "@types/react-grid-layout": "^1.1.1",
     "@types/uuid": "^8.3.0",
     "concurrently": "^4.1.0",
     "cross-env": "^6.0.3",
