--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
+    "react-grid-layout": "^1.2.0",
     "react-select": "^3.1.0",
     "react-sortable-pane": "^1.1.0",
-    "uuid": "^3.4.0",
-    "react-grid-layout": "^1.2.0"
+    "tsne-js": "^1.0.3",
+    "umap-js": "^1.3.3",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
