--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mobx-utils": "^5.6.0",
     "papaparse": "^5.2.0",
     "prop-types": "^15.7.2",
+    "re-resizable": "^6.9.0",
     "react": "^16.13.1",
     "react-bootstrap": "^0.32.4",
     "react-color": "^2.18.1",
